# ReservMemory

./: CMakeLists.txt  DeviceUpgradeStatus.h  IDeviceUpgradeStatus.h  README.md  ReserveMemoryManager.cpp  ReserveMemoryManager.h  build.sh  main.cpp  user_settings_data.proto
application/: CMakeLists.txt
application/include/: ModuleA.h  RsvMemUpgradeAdaptor.h  rsv_mem_usr_id.h
application/proto/: CMakeLists.txt  ModuleARsvData.proto
application/source/: ModuleA.cpp
rsv_mem_mng/: CMakeLists.txt
rsv_mem_mng/include/: IRsvMemMng.h  IRsvMemUpgradeAdaptor.h  IRsvMemUsr.h  ISwdlAdaptor.h  RsvMemHeader.h  pub_def.h
rsv_mem_mng/proto/: CMakeLists.txt  UsrHeader.proto
rsv_mem_mng/source/: CMakeLists.txt  CRsvMemMng.cpp
rsv_mem_mng/source/include/: CRsvMemMng.h  SwdlAdaptor.h
temp/: CMakeCache.txt  Makefile  ReservedMemory  cmake_install.cmake  compile_commands.json
temp/application/: Makefile  cmake_install.cmake  libapplication.dylib
temp/application/proto/: Makefile  cmake_install.cmake  libapplication_proto.dylib
temp/rsv_mem_mng/: Makefile  cmake_install.cmake  librsv_mem_mng.dylib
temp/rsv_mem_mng/proto/: Makefile  cmake_install.cmake  librsv_mem_mng_proto.dylib
temp/rsv_mem_mng/source/: Makefile  cmake_install.cmake
temp/test/: Makefile  cmake_install.cmake  test_exe
test/: CMakeLists.txt  test_copy.cpp  test_dummy.cpp  test_rsv_mem_mng.cpp
